--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "emailjs": "0.3.3",
     "socket.io": "*",
     "cookie": "*",
-    "connect": "*"
+    "connect": "*",
+    "redis": "*"
   },
   "engines": {
     "node": "0.8.14",
@@ -32,7 +33,8 @@
   "main": "app.js",
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "preinstall": "./install.sh"
   },
   "keywords": [
     "mobile",
