--- a/package.json
+++ b/package.json
@@ -1,16 +1,39 @@
 {
-  "name": "SMMApp",
+  "name": "smmapp",
   "version": "2.0.0",
   "description": "Saint Mary's Mobile App, Version 2.0",
   "author": "Glavin Wiechert <glavin.wiechert@gmail.com>",
+  "contributors": [
+    {
+      "name": "Glavin Wiechert",
+      "email": "glavin.wiechert@gmail.com",
+      "url": "https://github.com/Glavin001"
+    },
+    {
+      "name": "Andrew Masiye",
+      "email": "amasiye313@gmail.com",
+      "url": "https://github.com/amasiye"
+    },
+    {
+      "name": "Javian Trotman",
+      "email": "jtp3sk@gmail.com",
+      "url": "https://github.com/TwistedFaith"
+    },
+    {
+      "name": "Daniel Lockhart",
+      "email": "d.f.locked@gmail.com",
+      "url": "https://github.com/Danlock"
+    }
+  ],
   "website": {
-    "url": "cs.smu.ca"
+    "url": "http://glavin001.github.io/SMMApp2/"
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/Glavin001/SMMApp2.git"
   },
   "private": true,
+  "analyze": false,
   "dependencies": {
     "express": "3.0.6",
     "stylus": "0.31.0",
@@ -24,17 +47,24 @@
     "redis": "*"
   },
   "engines": {
-    "node": "0.8.14",
-    "npm": "1.1.65"
+    "node": ">=0.8.14",
+    "npm": ">=1.1.65"
+  },
+  "config": {
   },
   "bugs": {
-    "url": "https://github.com/Glavin001/SMMApp2/issues"
+    "url": "https://github.com/Glavin001/SMMApp2/issues",
+    "email": "glavin.wiechert@gmail.com"
   },
   "main": "app.js",
   "devDependencies": {},
   "scripts": {
+    "start": "node app.js --production --multicore",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "preinstall": "./install.sh"
+    "preinstall": "./install.sh",
+    "postinstall": "echo \"Installation complete.\"; ",
+    "predeploy": "echo This will be run before deploying the app",
+    "postdeploy": "echo This will be run after deploying the app"
   },
   "keywords": [
     "mobile",
