Added new way to host documentation without having access to Github repo.

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "cookie": "*",
     "connect": "*",
     "redis": "*",
-    "commander": "*"
+    "commander": "*",
+    "beautiful-docs": "*"
   },
   "engines": {
     "node": ">=0.8.14",
