Worked on #9, automated scheduling system. Getting very close. Tests appear to be working now. Next up is an interface and displaying and sifting thru results.

--- a/bower.json
+++ b/bower.json
@@ -31,5 +31,6 @@
     ,"ionicons": "*"
     ,"impress.js": "*"
     ,"jquery.formance": "https://github.com/omarshammas/jquery.formance.git"
+    ,"fullcalendar": "*"
   }
 }
