--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Custom Configuration (Personal/Per Installation)
+config.json
+
 # Node.js
 npm-debug.log
 node_modules
@@ -18,7 +21,8 @@ Thumbs.db
 # Node Modules
 node_modules
 
-# Styl resulting CSS
+# Stylus resulting CSS, can be regenerated.
+# All CSS files are originally created as Stylus .styl files.
 app/public/css/*.css
 
 # Redis Dump files
