added beta twilio functionality #10

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "commander": "*",
     "beautiful-docs": "*",
     "nodeunit": "*",
+	"twilio": "*",
     "node-icalendar": "https://github.com/Glavin001/node-icalendar/tarball/master"
   },
   "engines": {
