--- a/bower.json
+++ b/bower.json
@@ -22,15 +22,15 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "*"
-    ,"leaflet": "*"
-    ,"bootstrap": "*"
-    ,"codemirror": "*"
-    ,"Leaflet.awesome-markers": "*"
-    ,"Font-Awesome": "*"
-    ,"ionicons": "*"
-    ,"impress.js": "*"
+    "jquery": "1.10.2"
+    ,"leaflet": "0.7.1"
+    ,"bootstrap": "3.0.3"
+    ,"codemirror": "3.20.0"
+    ,"Leaflet.awesome-markers": "2.0.1"
+    ,"Font-Awesome": "4.0.3"
+    ,"ionicons": "1.4.0"
+    ,"impress.js": "0.5.3"
     ,"jquery.formance": "https://github.com/omarshammas/jquery.formance.git"
-    ,"fullcalendar": "*"
+    ,"fullcalendar": "1.6.4"
   }
 }
