--- a/package.json
+++ b/package.json
@@ -84,7 +84,9 @@
     "karma-ng-scenario": "^0.1.0",
     "grunt-karma": "^0.8.2",
     "karma": "^0.12.1",
-    "karma-ng-html2js-preprocessor": "^0.1.0"
+    "karma-ng-html2js-preprocessor": "^0.1.0",
+    "karma-jasmine": "~0.2.2",
+    "karma-chrome-launcher": "~0.1.2"
   },
   "engines": {
     "node": ">=0.10.0"
