--- a/package.json
+++ b/package.json
@@ -35,25 +35,25 @@
   "private": true,
   "analyze": false,
   "dependencies": {
-    "express": "3.0.6"
-    ,"stylus": "0.31.0"
-    ,"jade": "0.27.7"
-    ,"mongodb": "1.2.7"
-    ,"moment": "1.7.2"
-    ,"emailjs": "0.3.3"
-    ,"socket.io": "0.9.16"
-    ,"cookie": "0.1.0"
-    ,"connect": "2.11.0"
-    ,"redis": "0.9.0"
-    ,"commander": "2.1.0"
-    ,"beautiful-docs": ""
-    ,"nodeunit": "0.8.2"
-    ,"icalendar": "0.6.3"
-    ,"twilio": "1.5.0"
-    ,"toobusy": "0.2.4"
-    ,"forever-monitor": "1.2.3"
-    , "request": "2.33.0"
-    , "cheerio": ">=0.13.0"
+    "express": "3.0.6",
+    "stylus": "0.31.0",
+    "jade": "0.27.7",
+    "mongodb": "1.2.7",
+    "moment": "1.7.2",
+    "emailjs": "0.3.3",
+    "socket.io": "0.9.16",
+    "cookie": "0.1.0",
+    "connect": "2.11.0",
+    "redis": "0.9.0",
+    "commander": "2.1.0",
+    "beautiful-docs": "",
+    "nodeunit": "0.8.2",
+    "icalendar": "0.6.3",
+    "twilio": "1.5.0",
+    "toobusy": "0.2.4",
+    "forever-monitor": "1.2.3",
+    "request": "2.33.0",
+    "cheerio": ">=0.13.0"
   },
   "devDependencies": {
     "bower": "1.2.8",
@@ -86,7 +86,8 @@
     "karma": "^0.12.1",
     "karma-ng-html2js-preprocessor": "^0.1.0",
     "karma-jasmine": "~0.2.2",
-    "karma-chrome-launcher": "~0.1.2"
+    "karma-chrome-launcher": "~0.1.2",
+    "karma-phantomjs-launcher": "^0.1.2"
   },
   "engines": {
     "node": ">=0.10.0"
