Closes #61. Finished and tested Faculty info search.

--- a/package.json
+++ b/package.json
@@ -96,7 +96,8 @@
     "karma-phantomjs-launcher": "^0.1.2"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=0.10.0",
+    "npm": ">=1.4.x"
   },
   "scripts": {
     "test": "grunt test"
