--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,20 @@
 {
-  "name": "smmapp2",
+  "name": "smmapp",
+  "private": true,
   "version": "0.0.0",
   "dependencies": {
     "angular": "1.2.15",
     "json3": "~3.2.6",
     "es5-shim": "~2.1.0",
-    "jquery": "~1.11.0",
+    "jquery": "~2.1.0",
     "bootstrap-sass-official": "~3.1.0",
     "angular-resource": "1.2.15",
     "angular-cookies": "1.2.15",
     "angular-sanitize": "1.2.15",
-    "angular-route": "1.2.15"
+    "angular-route": "1.2.15",
+    "leaflet": "~0.7.2",
+    "Font-Awesome": "~4.0.3",
+    "ionicons": "~1.4.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
