--- a/package.json
+++ b/package.json
@@ -67,19 +67,19 @@
     "bower": "1.2.8",
     "grunt": "~0.4.1",
     "grunt-autoprefixer": "~0.4.0",
-    "grunt-bower-install": "~1.0.0",
-    "grunt-concurrent": "~0.5.0",
+    "grunt-bower-install": "^1.4.0",
+    "grunt-concurrent": "^0.5.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-compass": "~0.7.2",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-connect": "~0.5.0",
+    "grunt-contrib-connect": "^0.7.1",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-cssmin": "~0.7.0",
     "grunt-contrib-htmlmin": "~0.1.3",
     "grunt-contrib-imagemin": "~0.3.0",
     "grunt-contrib-jshint": "~0.7.1",
     "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-watch": "~0.5.2",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-google-cdn": "~0.2.0",
     "grunt-newer": "~0.6.1",
     "grunt-ngmin": "~0.0.2",
@@ -98,7 +98,20 @@
     "karma-phantomjs-launcher": "^0.1.2",
     "commander": "^2.1.0",
     "csv": "^0.3.7",
-    "Faker": "^0.7.0"
+    "Faker": "^0.7.0",
+    "debug": "^0.8.0",
+    "connect-livereload": "^0.3.2",
+    "chalk": "^0.4.0",
+    "jshint": "^2.4.4",
+    "grunt-lib-contrib": "^0.7.1",
+    "glog": "^1.4.0",
+    "google-cdn": "^0.5.1",
+    "grunt-open": "^0.2.3",
+    "clean-css": "^2.1.8",
+    "qs": "^0.6.6",
+    "node-uuid": "^1.4.1",
+    "mime": "^1.2.11",
+    "json-stringify-safe": "^5.0.0"
   },
   "engines": {
     "node": ">=0.10.0",
